// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs Snapshot Renders the UI snapshot correctly 1`] = `
<nav
  aria-label="Breadcrumb"
  className="chakra-breadcrumb css-1xdhyk6"
  id="ds-breadcrumbs-breadcrumbs-test"
>
  <ol
    className="chakra-breadcrumb__list css-70qvj9"
  >
    <li
      className="chakra-breadcrumb__list-item css-18biwo"
    >
      <a
        className="chakra-breadcrumb__link css-0"
        href="#string1"
      >
        <span
          className="breadcrumb-label"
        >
          string1
        </span>
      </a>
      <span
        className="css-t4q1nq"
        role="presentation"
      >
        /
      </span>
    </li>
    <li
      className="chakra-breadcrumb__list-item css-18biwo"
    >
      <a
        className="chakra-breadcrumb__link css-0"
        href="#string2"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon breadcrumbs-icon css-1vgifmd"
          data-file-name="SvgArrow"
          focusable={false}
          id="ds-breadcrumbs-breadcrumbs-test-backarrow"
          role="img"
          title="arrow icon"
        />
        <span
          className="breadcrumb-label"
        >
          string2
        </span>
      </a>
      <span
        className="css-t4q1nq"
        role="presentation"
      >
        /
      </span>
    </li>
    <li
      className="chakra-breadcrumb__list-item css-18biwo"
    >
      <a
        aria-current="page"
        className="chakra-breadcrumb__link css-0"
        href="#string3"
      >
        <span
          className="breadcrumb-label"
        >
          string3
        </span>
      </a>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumbs Snapshot Renders the UI snapshot correctly 2`] = `
<nav
  aria-label="Breadcrumb"
  className="chakra-breadcrumb css-1xdhyk6"
  id="ds-breadcrumbs-breadcrumbs-test"
>
  <ol
    className="chakra-breadcrumb__list css-70qvj9"
  >
    <li
      className="chakra-breadcrumb__list-item css-18biwo"
    >
      <a
        className="chakra-breadcrumb__link css-0"
        href="#string1"
      >
        <span
          className="breadcrumb-label"
        >
          string1
        </span>
      </a>
      <span
        className="css-t4q1nq"
        role="presentation"
      >
        /
      </span>
    </li>
    <li
      className="chakra-breadcrumb__list-item css-18biwo"
    >
      <a
        className="chakra-breadcrumb__link css-0"
        href="#string2"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon breadcrumbs-icon css-1vgifmd"
          data-file-name="SvgArrow"
          focusable={false}
          id="ds-breadcrumbs-breadcrumbs-test-backarrow"
          role="img"
          title="arrow icon"
        />
        <span
          className="breadcrumb-label"
        >
          string2
        </span>
      </a>
      <span
        className="css-t4q1nq"
        role="presentation"
      >
        /
      </span>
    </li>
    <li
      className="chakra-breadcrumb__list-item css-18biwo"
    >
      <a
        aria-current="page"
        className="chakra-breadcrumb__link css-0"
        href="#string3"
      >
        <span
          className="breadcrumb-label"
        >
          string3
        </span>
      </a>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumbs Snapshot Renders the UI snapshot correctly 3`] = `
<nav
  aria-label="Breadcrumb"
  className="chakra-breadcrumb css-1xdhyk6"
  id="ds-breadcrumbs-breadcrumbs-test"
>
  <ol
    className="chakra-breadcrumb__list css-70qvj9"
  >
    <li
      className="chakra-breadcrumb__list-item css-18biwo"
    >
      <a
        className="chakra-breadcrumb__link css-0"
        href="#string1"
      >
        <span
          className="breadcrumb-label"
        >
          string1
        </span>
      </a>
      <span
        className="css-t4q1nq"
        role="presentation"
      >
        /
      </span>
    </li>
    <li
      className="chakra-breadcrumb__list-item css-18biwo"
    >
      <a
        className="chakra-breadcrumb__link css-0"
        href="#string2"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon breadcrumbs-icon css-1vgifmd"
          data-file-name="SvgArrow"
          focusable={false}
          id="ds-breadcrumbs-breadcrumbs-test-backarrow"
          role="img"
          title="arrow icon"
        />
        <span
          className="breadcrumb-label"
        >
          string2
        </span>
      </a>
      <span
        className="css-t4q1nq"
        role="presentation"
      >
        /
      </span>
    </li>
    <li
      className="chakra-breadcrumb__list-item css-18biwo"
    >
      <a
        aria-current="page"
        className="chakra-breadcrumb__link css-0"
        href="#string3"
      >
        <span
          className="breadcrumb-label"
        >
          string3
        </span>
      </a>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumbs Snapshot Renders the UI snapshot correctly 4`] = `
<nav
  aria-label="Breadcrumb"
  className="chakra-breadcrumb css-1xdhyk6"
  id="ds-breadcrumbs-breadcrumbs-test"
>
  <ol
    className="chakra-breadcrumb__list css-70qvj9"
  >
    <li
      className="chakra-breadcrumb__list-item css-18biwo"
    >
      <a
        className="chakra-breadcrumb__link css-0"
        href="#string1"
      >
        <span
          className="breadcrumb-label"
        >
          string1
        </span>
      </a>
      <span
        className="css-t4q1nq"
        role="presentation"
      >
        /
      </span>
    </li>
    <li
      className="chakra-breadcrumb__list-item css-18biwo"
    >
      <a
        className="chakra-breadcrumb__link css-0"
        href="#string2"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon breadcrumbs-icon css-1vgifmd"
          data-file-name="SvgArrow"
          focusable={false}
          id="ds-breadcrumbs-breadcrumbs-test-backarrow"
          role="img"
          title="arrow icon"
        />
        <span
          className="breadcrumb-label"
        >
          string2
        </span>
      </a>
      <span
        className="css-t4q1nq"
        role="presentation"
      >
        /
      </span>
    </li>
    <li
      className="chakra-breadcrumb__list-item css-18biwo"
    >
      <a
        aria-current="page"
        className="chakra-breadcrumb__link css-0"
        href="#string3"
      >
        <span
          className="breadcrumb-label"
        >
          string3
        </span>
      </a>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumbs Snapshot Renders the UI snapshot correctly 5`] = `
<nav
  aria-label="Breadcrumb"
  className="chakra-breadcrumb css-1xdhyk6"
  id="ds-breadcrumbs-breadcrumbs-test"
>
  <ol
    className="chakra-breadcrumb__list css-70qvj9"
  >
    <li
      className="chakra-breadcrumb__list-item css-18biwo"
    >
      <a
        className="chakra-breadcrumb__link css-0"
        href="#string1"
      >
        <span
          className="breadcrumb-label"
        >
          string1
        </span>
      </a>
      <span
        className="css-t4q1nq"
        role="presentation"
      >
        /
      </span>
    </li>
    <li
      className="chakra-breadcrumb__list-item css-18biwo"
    >
      <a
        className="chakra-breadcrumb__link css-0"
        href="#string2"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon breadcrumbs-icon css-1vgifmd"
          data-file-name="SvgArrow"
          focusable={false}
          id="ds-breadcrumbs-breadcrumbs-test-backarrow"
          role="img"
          title="arrow icon"
        />
        <span
          className="breadcrumb-label"
        >
          string2
        </span>
      </a>
      <span
        className="css-t4q1nq"
        role="presentation"
      >
        /
      </span>
    </li>
    <li
      className="chakra-breadcrumb__list-item css-18biwo"
    >
      <a
        aria-current="page"
        className="chakra-breadcrumb__link css-0"
        href="#string3"
      >
        <span
          className="breadcrumb-label"
        >
          string3
        </span>
      </a>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumbs Snapshot Renders the UI snapshot correctly 6`] = `
<nav
  aria-label="Breadcrumb"
  className="chakra-breadcrumb css-1t0bvx9"
  id="ds-breadcrumbs-breadcrumbs-test"
>
  <ol
    className="chakra-breadcrumb__list css-70qvj9"
  >
    <li
      className="chakra-breadcrumb__list-item css-18biwo"
    >
      <a
        className="chakra-breadcrumb__link css-0"
        href="#string1"
      >
        <span
          className="breadcrumb-label"
        >
          string1
        </span>
      </a>
      <span
        className="css-t4q1nq"
        role="presentation"
      >
        /
      </span>
    </li>
    <li
      className="chakra-breadcrumb__list-item css-18biwo"
    >
      <a
        className="chakra-breadcrumb__link css-0"
        href="#string2"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon breadcrumbs-icon css-1vgifmd"
          data-file-name="SvgArrow"
          focusable={false}
          id="ds-breadcrumbs-breadcrumbs-test-backarrow"
          role="img"
          title="arrow icon"
        />
        <span
          className="breadcrumb-label"
        >
          string2
        </span>
      </a>
      <span
        className="css-t4q1nq"
        role="presentation"
      >
        /
      </span>
    </li>
    <li
      className="chakra-breadcrumb__list-item css-18biwo"
    >
      <a
        aria-current="page"
        className="chakra-breadcrumb__link css-0"
        href="#string3"
      >
        <span
          className="breadcrumb-label"
        >
          string3
        </span>
      </a>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumbs Snapshot Renders the UI snapshot correctly 7`] = `
<nav
  aria-label="Breadcrumb"
  className="chakra-breadcrumb css-1xdhyk6"
  data-testid="testid"
  id="ds-breadcrumbs-breadcrumbs-test"
>
  <ol
    className="chakra-breadcrumb__list css-70qvj9"
  >
    <li
      className="chakra-breadcrumb__list-item css-18biwo"
    >
      <a
        className="chakra-breadcrumb__link css-0"
        href="#string1"
      >
        <span
          className="breadcrumb-label"
        >
          string1
        </span>
      </a>
      <span
        className="css-t4q1nq"
        role="presentation"
      >
        /
      </span>
    </li>
    <li
      className="chakra-breadcrumb__list-item css-18biwo"
    >
      <a
        className="chakra-breadcrumb__link css-0"
        href="#string2"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon breadcrumbs-icon css-1vgifmd"
          data-file-name="SvgArrow"
          focusable={false}
          id="ds-breadcrumbs-breadcrumbs-test-backarrow"
          role="img"
          title="arrow icon"
        />
        <span
          className="breadcrumb-label"
        >
          string2
        </span>
      </a>
      <span
        className="css-t4q1nq"
        role="presentation"
      >
        /
      </span>
    </li>
    <li
      className="chakra-breadcrumb__list-item css-18biwo"
    >
      <a
        aria-current="page"
        className="chakra-breadcrumb__link css-0"
        href="#string3"
      >
        <span
          className="breadcrumb-label"
        >
          string3
        </span>
      </a>
    </li>
  </ol>
</nav>
`;
